<resources>
    <string name="app_name">GSC</string>
    <string name="test_string">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard
        dummy text ever sincethe 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries </string>
    <string name="hello_there_nwelcome_back">Hello There \nWelCome Back</string>
    <string name="Artistico_Club">It is said, "He who works with his hands is a Labour. He who works with his hands and his head is a Craftsman but he who works with his hands, 
        his head and his heart is an ARTIST.\' So, if you believe you have an artist brewing in you, then join us, The Fine Arts Club, on our voyage that can make you explore new dimensions and levels of Aesthetic value.</string>
    <string name="Cam_Circle">\"You don\'t take a photograph. You MAKE one\". Such was the abominable spirit of the CamCircle, photography club of GU, as they ventured out to 
        look for new members who were adept at making the world come alive through the curvature. The event spanned for several days on an online platform. The sample space for the photographs ranged from wildlife to caricatures. 
        Each month club members are encouraged to produce images based upon a specific photo assignment or Theme. A popular activity of the club is the periodic photography field trips or Shootouts. 
        Comprised primarily of day trips to local locations, Shootouts provide members and guests with practical photographic experience, a way to expand their vision and creativity, and a source of fun 
        and socialization. Several times a year the CAMCIRCLE provides opportunities for its members to exhibit their work in public venues. Members are encouraged to participate as another way of sharing their photography</string>
    <string name="Comikaze">Comikaze is the comic book club of Galgotias University. In this club, every member is geek. Whether you\’re a marvel or DC fan, we accept you with full honourability.
        There is no Iron-Man suit we possess in our resources but can create one together. Come join our League and save the world with us</string>
    <string name="Verve">We, at Verve believe in hunting down the talent in Galgotias University. We inspire, motivate and build courage among the students of the institution to stand out and showcase their talent in front of everyone. 
        We also host the annual event \‘Galgotias Got Talent\’ to provide platform for that.</string>
    <string name="The_Actors_Hub">Drama forms an integral part of every individual. Galgotias\' dramatics club: The Actor\’s Hub exits to enables its members to improve their language, 
        communicative and performance skills through which they realize their true passion for drama and provide them with the necessary platform to showcase their many talents. Major 
        activities so far: The club has participated in well-known events like channel V fest and IITD lit fest. Other activities include performing nukkad-natak on various social issues 
        such as drug addiction among criminals, discrimination against females and stage plays on resource management.</string>
    <string name="Studio_D">We provide a platform for the members to showcase their dancing prowess before the entire college community by organizing events from time to time. 
        There are proper auditions to select good dancers from the entire college community to represent our college in various inter-college fests. Club also collaborate with 
        professional choreographers and experts in organizing workshops for the members to learn different and newer dance styles (salsa, jazz and even classical dance forms)</string>
    <string name="Spic_Macay_Club">SPIC MACAY, Society for the Promotion of Indian Classical Music and Culture Amongst Youth. is a non-profit, voluntary movement with its primary
        objective being to expose today’s students and youth/young ones to the beauty, grace and wisdom embodied in the age-old Indian and world Art forms and its heritage.
        Classical music and dance, and other various art forms dating back to antiquity are the chief media for creating awareness about our culture amongst youth. \n\n
        Creation of SPIC MACAY happened for the mission and objective to revive the true spirit of the ancient Indian and world heritage. \n\n
        The club has clear objectives and manages to organize programs and witness world class artists and their performances and tries to provide an environment of learning with the Gurus and the Students.</string>
    <string name="Scintillations">Glamour that mesmerizes, attitude that takes over. The panache that lasts forever. Along with the bling of blinding lights, 
        fame that kisses your feet and not to forget, the camera flashes ready to blind you. From designers to models, from tattoo artists to choreographers, 
        here comes the society so strong, which creates history! The club has created its name and unique identity by showcasing a new theme altogether in every show they have participated.</string>
    <string name="Reverso">Reverso is all about making endorphin rush through your veins and making you laugh your brains out! This club believes in spreading laughter among all the comrades in Galgotias University. \n\n
        If you have a bit of humour within you with a pocket full of confidence just to showcase it, come join us at Reverso.</string>
    <string name="Note_Veda">Music expresses that which cannot be put into words and that which cannot remain silent.” Have you ever imagined about a place filled with immense talent and musical superstars? 
        Dreamt to be one of them? \n\n Note Veda, is one of the amazing platform for all the musicians with the dreams. With students who have their own album, 
        Soul Raaga to their name to having their own renowned bands whose names are enough, Crescendo, proudly claims itself to be the best among university music clubs in India. 
        With their instruments churning out magical sounds and not to forget the melodious voices of the vocalists, music created by the members will surely connect your soul to the heavens. 
        Galgotias G-Quasar, and almost every prestigious University fest has seen the Galgotians musicians reviving magic in them.</string>
    <string name="E_Cell">At E-Cell Galgotias University, we believe in creating an environment where the Youth and the Professionals who come together to concoct a new generation of CEOs. 
        We are here to burgeon the ideas into affluent StartUps because the \"The best way to predict the future is to create it.\" Our team toil here to support the aspiring Entrepreneurs 
        of the future and look for the people who want to change the world. We are working on enticing Entrepreneurship mindset among the people, open them up to this new world full of fun and zeal.
        Here we aim at building a strong team with an unmatched work ethic who work Day and Night to fulfil our goal of spreading Awareness regarding Entrepreneurship. 
        We organize Seminars, E-talks with Mentors, Angel Investors and the Venture Capitalists to Educate the Youth for the Future Endeavours</string>
    <string name="G_Post">G-Post is the monthly issue of Galgotias University. We believe in spreading words among the student at Galgotias University by presenting a complete 
        monthly report of all the events and happenings. G-Post is not just a bundle of printed pages but the beautifully woven words bounding you to enjoy every aspect at Galgotias University. 
        We all are editors at G-Post and work together as team to give student what they need to hear. G-Post is a full package of experiences along with beautiful clicks from every event. 
        You can get any information regarding the institution if you’re one of us. We are the eyes and ears of Galgotias University and we use them to you how beautiful this campus could be; 
        you only need to know the right words. Mischief managed.</string>
    <string name="Lingo_Freaks">A place for the people who believe that punctuation marks are not just emoticons but also can be expressed in emotions. With the university’s cream of anchors,
        orators, debaters, all present at one place, this club always managed to bring laurels to the university and throne it with crown in field of literary among universities at national level.
        The Literary club aims to cultivate and nourish the love for literature, written skills and books in each also promoting and organizing various literary events. Ironically it is a platform
        for those who loves the essence of literature and want to be entangled within it. The club has its background in various literary events ranging from anchoring, debates, jam, ham and many other such events.</string>
    <string name="Quizita_Mavens">Lorii Mayers once said- If you want the anwer Ask the question!! So if you are looking for answers, join us on the fierce battle of knowledge and unravel the braniac
        within you and explore the wilderness of cognizance within yourselves. We believe that \‘knowledge has to be improved, challenged and increased constantly, or it vanishes\’.
        So keep your brain cells charged and accompany us.</string>
    <string name="What_we_do_Mission">Holistic development is what we aim for by providing representation, educational development andsocial &amp; extracurricular opportunities.</string>
    <string name="What_we_do_Vision">At the heart of the Student Experience; we strive to have a positive impact on each and every one of our members.</string>
    <string name="What_we_do_Values_Trust"><b>Trust</b>: We put faith and trust in our Students and their ability to manage student activities, as well as in-spiring trust in our students
        by being open and honest with them about their Student council</string>
    <string name="What_we_do_Values_Intigrity"><b>Intigrity</b>: We aim to create an inviting atmosphere for all of our students and encourage them to be-come involved in the local and
        national Student community and the residential community of the city they dwell in.</string>
    <string name="What_we_do_Enviroment"><b>Environment</b>: We look to not only campaign about issues surrounding our environment, but provide an example for others to follow by reducing
        our carbon footprint and constantly improving our methods of recycling. We also believe in providing safe and friendly spaces for our students use.</string>
    <string name="What_we_do_Equality"><b>Equality</b>: We encourage a culture of friendship between all of our students regardless of sex, age, race, religion, disability, sexual preference
        or any other possible discriminatory factors.</string>
    <string name="What_we_do_Empowerment"><b>Empowerment</b>: The opinions, fears, prospects and wishes of students are at the heart of everything we do and allow us to set targets that are realistic
        to their expectations.</string>
</resources>